# the-third-eye

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_PLAN.md  build.bat  release.bat  start.bat  summary.md
.agent/rules/: comments.md
include/third_eye/: agent.hpp  collector.hpp  http_server.hpp  registry.hpp
scripts/: bump.js
src/: agent.cpp  http_server.cpp  main.cpp  registry.cpp
src/collectors/: cpu_windows.cpp  memory_windows.cpp  process_windows.cpp  system_windows.cpp
ui/: index.html  package-lock.json  package.json
ui/electron/: main.js  preload.js  splash.html
ui/src/: App.jsx
ui/src/components/: About.jsx  Alerts.jsx  Dashboard.jsx  LogViewer.jsx  ProcessTable.jsx  Settings.jsx  Toast.jsx
ui/src/services/: agentApi.js
ui/src/styles/: theme.css
